Added uiRevision: 1 and miniicon.

--- a/mojo/resources/de_de/appinfo.json
+++ b/mojo/resources/de_de/appinfo.json
@@ -3,5 +3,6 @@
 	"title": "Papierformate",
         "vendor": "Florian Jenn",
 	"main": "../../index.html",
-	"icon": "../../images/icon.png"
+	"icon": "../../images/con.png",
+	"miniicon": "../../images/miniicon.png"
 }
