Typo in icon path.

--- a/mojo/resources/de_de/appinfo.json
+++ b/mojo/resources/de_de/appinfo.json
@@ -3,6 +3,6 @@
 	"title": "Papierformate",
         "vendor": "Florian Jenn",
 	"main": "../../index.html",
-	"icon": "../../images/con.png",
+	"icon": "../../images/icon.png",
 	"miniicon": "../../images/miniicon.png"
 }
