--- a/mojo/appinfo.json
+++ b/mojo/appinfo.json
@@ -1,16 +1,16 @@
 {
 	"id":	     "net.effjot.papersizes",
-	"version":   "0.9.0",
+	"version":   "0.9.2",
 	"title":     "Paper Sizes",
 	"category":  "Reference",
 	"vendor":    "Florian Jenn",
 	"vendorurl": "http://www.effjot.net/",
-	"keywords":  ["paper", "size", "format", "papier", "größe", "format" ],
+	"keywords":  ["paper", "photo", "size", "format", "papier", "foto", "größe" ],
 	"type":	     "web",
 	"uiRevision": 1,
 	"main":	     "index.html",
-	"icon":	     "images/icon.png",
-	"miniicon":  "images/miniicon.png",
+	"icon":	     "images/icon64.png",
+	"miniicon":  "images/icon24.png",
 	"theme":     "light",
 	"noDeprecatedStyles": true
 }
