Keywords now in language-specific appinfo.json.

--- a/mojo/resources/fr/appinfo.json
+++ b/mojo/resources/fr/appinfo.json
@@ -1,8 +1,9 @@
 {
-	"id": "net.effjot.papersizes",
-	"title": "Formats de Papier",
-        "vendor": "Florian Jenn",
-	"main": "../../index.html",
-	"icon": "../../images/icon64.png",
+	"id":       "net.effjot.papersizes",
+	"title":    "Formats de Papier",
+        "vendor":   "Florian Jenn",
+	"keywords": [ "format", "papier" ],
+	"main":     "../../index.html",
+	"icon":     "../../images/icon64.png",
 	"miniicon": "../../images/icon24.png"
 }
